# sassofono-blu

./: README.md  chat.txt  figa
Chal1_up_to_date/: CMakeLists.txt  Compute_solution.cpp  Compute_solution.h  Derivative.h  Derivatives.hpp  Makefile  main.cpp  muparser_fun.hpp  newton.hpp
Challenge_02/: Bisection.h  CMakeLists.txt  QuasiNewton.h  RegulaFalsi.h  Secant.h  SolverBase.cpp  SolverBase.h  SolverFactory.h  SolverTraits.h  TypeTraits.h  testBasicZeroFun.cpp
PROGETTO NAPDE/: 1-s2.0-S0021999196900339-main.pdfZone.Identifier
chal1/: CMakeLists.txt  Data.cpp  Data.h  main.cpp
challenge2.0/: Bisection.cpp  Bisection.h  QuasiNewton.cpp  QuasiNewton.h  RegulaFalsi.cpp  RegulaFalsi.h  Secant.cpp  Secant.h  SolverBase.cpp  SolverBase.h  Traits.h
challenge2.0_bis/: Bisection.cpp  Bisection.h  CMakeLists.txt  QuasiNewton.cpp  QuasiNewton.h  RegulaFalsi.cpp  RegulaFalsi.h  Secant.cpp  Secant.h  SolverBase.h  SolverFactory.h  Traits.h  main.cpp
challenge_01/: compute_solution.cpp  compute_solution.h
challenge_01/my_env/: CMakeLists.txt  crank_nicolson.cpp  crank_nicolson.h
nuovoprogetto_fuck/: Compute_solution.h  Derivative.h  Makefile  data_parameters.txt  main_simple  main_simple.cpp  muparser_fun.hpp  muparser_fun_exact.hpp  newton.hpp  plot_error.gnuplot  plot_script.gnuplot  program
